--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. We are <strong>Group Name</strong>.</h1>
+								<h1>Hi. We are <strong>Electric Boogaloo</strong>.</h1>
 							</header>
 							<p>And this is our project, <strong><em>"A Time-series Analysis of the Red-tagging of Lumad Groups on Twitter"</em></strong>, where we aim to analyze and understand the dynamics of the red-tagging discourse in relation to the indigenous Lumad community, by examining the tactics, narratives, and contribution of different events to the spread of false information and the aggravation of its negative consequences.</p>
 							<p>The Data Science Team</p>
@@ -83,7 +83,7 @@
 					  <div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<h3>Solution</h3>
-							<p>To understand the ...</p>
+							<p>To find out if specific events can be attributed to the red-tagging of Lumads, we conducted a time series analysis on tweets containing mis/disinformation about Lumads. We looked into the time the tweets were posted, and performed data modeling to discover insights about the spread of these false narratives.</p>
 							<p>Learn more about our methods <a href="#methods">here</a>.</p>
 						</section>
 					  </div>
