Updated linear regression

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				</div>
 				<footer>
 					<p>Interested in exploring our dataset?</p>
-					<a href="#data" class="button large scrolly">Let's take a look at our data</a>
+					<a href="https://github.com/layadp/Red-Tagging-of-Lumad-Groups/blob/main/code/Group16UpdatedDataset.csv" class="button large scrolly">Let's take a look at our data</a>
 				</footer>
 			</article>
 
