--- a/statmodel.html
+++ b/statmodel.html
@@ -43,14 +43,11 @@
         <div class="container">
           <header>
             <h2><strong>Linear Regression Model</strong></h2>
-            <p>The data was segmented according to the identified events, particularly before and after both the imposition of Martial Law in Mindanao on July 2017 and the establishment of the NTF-ELCAC on December 2018. Linear regression was performed on each region of data. The resulting p-values are as follows:</p>
-            <ol>
-              <li>Before Martial Law in Mindanao = 0.60</li>
-              <li>After Martial Law in Mindanao = 0.17</li>
-              <li>Before establishment of NTF-ELCAC = 0.21</li>
-              <li>After establishment of NTF-ELCAC = 0.22</li>
-            </ol>
-            <p>Thus, for all segments, no significant relationship was found between the dates the tweets were posted and the number of tweets, in relation to the 2017 Martial Law in Mindanao and the establishment of the NTF-ELCAC.</p>
+            <p>The data was segmented according to the identified events, particularly before and after both the imposition of Martial Law in Mindanao on July 2017 and the establishment of the NTF-ELCAC on December 2018. Linear regression was performed on each region of data.</p><br>
+						<img src = "linearml.png", width = "1000">
+						<img src = "linearntf.png", width = "1000"><br><br>
+            <p>It can be observed that the resulting p-values in each segment are less than 0.05. Thus, for all segments, no significant relationship was found between the dates the tweets were posted and the number of tweets, in relation to the 2017 Martial Law in Mindanao and the establishment of the NTF-ELCAC.</p><br>
+						<p>However, this does not mean that there is no correlation between the identified events and the spread of mis/disinformation about Lumad groups. The size of the current dataset may have to be increased to provide a more definitive result. </p><br>
           </header>            
         </div>
 
