Updated event detection

--- a/statmodel.html
+++ b/statmodel.html
@@ -59,7 +59,10 @@
       <div class="container">
         <header>
           <h2><strong>Event Detection Model</strong></h2>
-          <p>Peaks in mis/disinformation tweet activity were identified using the event detection model. Generally, it can be observed that the events coinciding with each of the peaks are actions from the state and are political in nature.</p>
+					<p>Given the non-significance of the results of linear regression, we also used the event detection model to identify peaks in mis/disinformation tweet activity. Relevant events that coincided with each of the peaks were then identified. Generally, it can be observed that coinciding events are actions from the state and are political in nature.</p><br>
+					<img src = "peak.png", width = "1000"><br><br>
+					<p>The first peak corresponding to July 2017 suggests that tweets red-tagging Lumad groups may have been instigated by both Rodrigo Duterte’s statement and the extension of Martial Law in Mindanao during this month. There has been fluctuating tweet activity after this initial spike in mis/disinformation tweets.</p><br>
+					<p>While the establishment of the NTF-ELCAC can be considered relevant, the findings of the study did not show a strong correlation between the tweets red-tagging Lumad groups and the said event. Overall, the majority of red-tagging activity on Twitter could be attributed to news related to Lumad/Bakwit schools.</p>
         </header>            
       </div>
     </article>
