Updated results in index

--- a/index.html
+++ b/index.html
@@ -209,30 +209,17 @@
 				<div class="container">
 					<header>
 						<h2>Here's what we found out.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
-					
-					<!-- Results and Discussion -->
-					<div class="container">
-						<header>
-							<h3><strong>Results & Discussion</strong></h3>
-							<p>Generally, it can be observed that the events coinciding with each of the peaks are actions from the state and are political in nature.</p>
-							<p>The first peak corresponding to July 2017 suggests that tweets red-tagging Lumad groups may have been instigated by both Rodrigo Duterte’s statement and the extension of Martial Law in Mindanao during this month. There has been fluctuating tweet activity after this initial spike in mis/disinformation tweets.</p>
-							<p>While the establishment of the NTF-ELCAC can be considered relevant, the findings of the study did not show a strong correlation between the tweets red-tagging Lumad groups and the said event.</p>
-							<p>Overall, the majority of red-tagging activity on Twitter could be attributed to news related to Lumad/Bakwit schools.</p>
-						</header>            
-					</div>
 				
-					<!-- Implications and Conclusion -->
 					<div class="container">
 						<header>
-							<h3><strong>Implications and Conclusion</strong></h3>
-							<p>The study shows that none of the identified events correlated with the spread of mis/disinformation about the red-tagging of Lumads. However, the 2017 Martial Law in Mindanao can be associated with the start of false narratives about Lumad groups on Twitter given the first peak of mis/disinformation tweet activity recorded in July 2017.</p>
-							<p>In addition, since the observed peaks correspond to actions or statements done by the administration, this suggests that the perception of the public towards Lumads may largely be shaped by the government. For future studies, analyzing mis/disinformation posts on other social media platforms, such as Facebook, may provide further insights.</p>
+							<p>From the results of the <a href="statmodel.html">data modeling</a>, we can conclude that none of the identified events correlated with the spread of mis/disinformation about the red-tagging of Lumads, and thus, we accept the null hypothesis.</p><br>
+							<p>However, the 2017 Martial Law in Mindanao can be associated with the start of false narratives about Lumad groups on Twitter given the first peak of mis/disinformation tweet activity recorded in July 2017. In addition, since the observed peaks correspond to actions or statements done by the administration, this suggests that the perception of the public towards Lumads may largely be shaped by the government.</p><br>
+							<p>For future studies, it is recommended to increase the size of the dataset and to analyze mis/disinformation posts on other social media platforms, such as Facebook, to gain further insights. </p>
 						</header>   
 						<footer>
 							<p>Want to learn more? Take a look at our source codes.</p>
-							<a href="#contact" class="button large scrolly">Github Repo</a>
+							<a href="https://github.com/layadp/Red-Tagging-of-Lumad-Groups" class="button large scrolly">Github Repo</a>
 						</footer>         
 					</div>
 				</div>
