--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<li><a href="#data">Data</a></li>
 					<li><a href="#methods">Methods</a></li>
 					<li><a href="#results">Results</a></li>
-					<li><a href="references.html">References</a></li>
-					<li><a href="#team">Contact Us</a></li>
+					<li><a href="#team">Team</a></li>
+					<li><a href="#contact">Contact Us</a></li>
 				</ul>
 			</nav>
 
@@ -218,19 +218,48 @@
 							<p>For future studies, it is recommended to increase the size of the dataset and to analyze mis/disinformation posts on other social media platforms, such as Facebook, to gain further insights. </p>
 						</header>   
 						<footer>
-							<p>Want to learn more? Take a look at our source codes.</p>
-							<a href="https://github.com/layadp/Red-Tagging-of-Lumad-Groups" class="button large scrolly">Github Repo</a>
+							<p>Want to learn more? Take a look at our source codes and references.</p>
+							<a href="https://github.com/layadp/Red-Tagging-of-Lumad-Groups" class="button large scrolly">Github Repo</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<a href="https://docs.google.com/document/d/1km9lCBWQdEW-p0OodcjVfJ5QV30d_y1-b9Xc2SuS3bs/edit?usp=sharing" class="button large scrolly">References</a>
 						</footer>         
 					</div>
 				</div>
-			</article>		
-
+			</article>	
+		
 		<!-- Team -->
-			<article id="team" class="wrapper style4">
+		<article id="team" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>Meet the team.</h2>
+				</header>
+				<div class="row aln-center">
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+						<h3>Gianna Laya Dela Pena</h3>
+						<p>bio</p>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+						<h3>Julia Ysobel Pineda</h3>
+						<p>bio</p>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+						<h3>Frances Lei Ramirez</h3>
+						<p>bio</p>
+						</section>
+					</div>
+					</div>
+			</div>
+		</article>
+
+		<!-- Contact Us -->
+			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
 						<h2>We'd like to hear from you.</h2>
-						<p>You can add more information about the team members here.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -263,22 +292,8 @@
 							<ul class="social">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
 							</ul>
 							<hr />
 						</div>
