--- a/exploration.html
+++ b/exploration.html
@@ -121,8 +121,8 @@
                 <p>A scatterplot was used to display the relationship between tweet engagement and tweet content type, as well as tweet engagement and year posted. The engagement value is further discussed in the <a href="#features">Feature Generation</a> section.</p>
                 <p>The first scatterplot shows us that tweets under the Rational type have the highest engagement, while tweets under the Transactional type have the lowest engagement. This implies that users engage more with tweets that are informational or educational.</p>
                 <p>The second scatterplot shows us that tweets made in recent years, specifically 2020 and 2022, have the highest engagement</p>
-                <img src="scatterplot1.PNG" width="500" />
-                <img src="scatterplot2.PNG" width="400" />
+                <img src="scatterplot1.png" width="500" />
+                <img src="scatterplot2.png" width="400" />
               </section>
             </div>
             <div class="col-12 col-12-medium col-6-small">
