--- a/exploration.html
+++ b/exploration.html
@@ -67,7 +67,7 @@
             <div class="col-12 col-12-medium col-12-small">
               <section class="box style1">
                 <h3>Standardization</h3>
-                <p>The frequency of tweets per year were scaled around the mean with a unit standard deviation. Here, we considered outliers to be values which exceed 3 standard deviations from the mean. From this definition, the resulting graph shows that there are no outliers among the number of tweets for each year. Most years have tweet frequencies that fall below one standard deviation from the mean, with the exception of the years 2015 and 2018 which exceed 1 and 2 standard deviations, respectively.</p> <img src="Standardization.png" alt="Standardization" width="500" height="400"/>
+                <p>The frequency of tweets per year were scaled around the mean with a unit standard deviation. Here, we considered outliers to be values which exceed 3 standard deviations from the mean. From this definition, the resulting graph shows that there are no outliers among the number of tweets for each year. Most years have tweet frequencies that fall below one standard deviation from the mean, with the exception of the years 2015 and 2022 which exceed 1 and 2 standard deviations, respectively.</p> <img src="Standardization.png" alt="Standardization" width="500" height="400"/>
               </section>
             </div>
           </div>
@@ -97,7 +97,7 @@
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Binning</h3>
-                <p>The tweets collected were grouped into yearly, daily, and 6-hour intervals. Most of the tweets collected were made in 2018, while no tweets were collected from the year 2016. Tweets were usually created on Fridays from the 18:00-23:59 time period.</p>
+                <p>The tweets collected were grouped into yearly, daily, and 6-hour intervals. Most of the tweets collected were made in 2022, while no tweets were collected from the year 2016. Tweets were usually created on Fridays from the 06:00-11:59 time period.</p>
                 <img src = "BinningYear.png", width = "400">
                 <img src = "BinningDay.png", width = "400">
                 <img src = "BinningTime.png", width = "400">
@@ -142,7 +142,7 @@
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Line Graph</h3>
-                <p>The following line graph shows the trend for the frequency of mis/disinformation tweets concerning the redtagging of Lumad from the years 2015 to 2022. From 2015, the number of tweets steadily increase until its peak in 2018. From then on up to 2022, the frequency of tweets appears to fluctuate every year.</p> <img src = "LineGraph.png", width = "500">
+                <p>The following line graph shows the trend for the frequency of mis/disinformation tweets concerning the redtagging of Lumad from the years 2015 to 2022. From 2015, the number of tweets steadily increase until its first peak in 2018. From then, the frequency of tweets appears to fluctuate every year until it reaches its highest peak in 2022.</p> <img src = "LineGraph.png", width = "500">
               </section>
             </div>
           </div>
