--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/logo.png" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -193,7 +193,7 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3><a href="statmodel.html">Data Modeling</a></h3>
 								<p>Statistical modeling using segmented linear regression and machine learning using the event detection model were done to test the hypothesis.</p>
 							</article>
@@ -235,20 +235,29 @@
 				<div class="row aln-center">
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
-						<h3>Gianna Laya Dela Pena</h3>
-						<p>bio</p>
+							<a href="#" class="image fit"><img src="images/laya.jpg" alt="" /></a>
+							<p></p>
+							<h3>Gianna Laya Dela Pena</h3>
+							<p>BS Computer Science, B2019<br>UP Diliman<br>Scientific Computing Laboratory</p>
+							<a href="mailto:gndelapena@up.edu.ph">gndelapena@up.edu.ph</a>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
-						<h3>Julia Ysobel Pineda</h3>
-						<p>bio</p>
+							<a href="#" class="image fit"><img src="images/jia.jpg" alt="" /></a>
+							<p></p>
+							<h3>Julia Ysobel Pineda</h3>
+							<p>BS Computer Science, B2019<br>UP Diliman<br>Algorithms and Complexity Laboratory</p>
+							<a href="mailto:jypineda@up.edu.ph">jypineda@up.edu.ph</a>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
-						<h3>Frances Lei Ramirez</h3>
-						<p>bio</p>
+							<a href="#" class="image fit"><img src="images/lei.jpg" alt="" /></a>
+							<p></p>
+							<h3>Frances Lei Ramirez</h3>
+							<p>BS Computer Science, B2019<br>UP Diliman<br>Service Science and Software Engineering Laboratory</p>
+							<a href="mailto:frramirez2@up.edu.ph">frramirez2@up.edu.ph</a>
 						</section>
 					</div>
 					</div>
@@ -301,7 +310,7 @@
 					</div> -->
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Dela Pena, Pineda, Ramirez (2023)</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
