--- a/exploration.html
+++ b/exploration.html
@@ -188,7 +188,7 @@
 					<a href="https://forms.gle/m6P9e2YeCzzsMWab6" class="button large scrolly">Send us a message!</a>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Dela Pena, Pineda, Ramirez (2023)</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
