--- a/exploration.html
+++ b/exploration.html
@@ -172,8 +172,8 @@
 				<div class="container">
           <header>
             <h2><strong>Source Codes</strong></h2>
-            <p>While this section summarizes our findings, you can check our code here:</p>
-            <script src="https://gist.github.com/leiramirez/944643234b5d2bb053dd005b3b556ecb.js"></script>
+            <p>While this section summarizes our findings, you can check our code here:</p><br>
+            <script src="https://gist.github.com/leiramirez/b7c8741e021c38b08e21477cffff68e4.js"></script>
           </header>
         </div>
 			</article>
