--- a/statmodel.html
+++ b/statmodel.html
@@ -71,8 +71,8 @@
       <div class="container">
         <header>
           <h2><strong>Source Codes</strong></h2>
-          <p>While this section summarizes our findings, you can check our code here:</p>
-          <script src="https://gist.github.com/leiramirez/944643234b5d2bb053dd005b3b556ecb.js"></script>
+          <p>While this section summarizes our findings, you can check our code here:</p><br>
+          <script src="https://gist.github.com/leiramirez/8cea3c1d277413c7e10aa6b49e11a3eb.js"></script>
         </header>
       </div>
     </article>
