--- a/exploration.html
+++ b/exploration.html
@@ -129,7 +129,7 @@
               <section class="box style1">
                 <h3>Heatmap</h3>
                 <p>A heatmap was used to display the correlation between a tweet's likes, replies, retweets, quote tweets, and engagement, and the number of followers of the account that posted the tweet. While there is a positive correlation between the engagement and followers, this is considered to be a weak correlation. This implies that tweets made by accounts with a high number of followers do not necessarily mean that their tweets have high engagement. Moreover, out of the four contributors for engagement, it can be noticed that retweets and likes have the highest correlations. This can mean that users may be more influenced to retweet and/or like a tweet if the author is well-known.</p>
-                <img src="heatmap.PNG" width="400" />
+                <img src="heatmap.png" width="400" />
               </section>
             </div>
             <div class="col-12 col-12-medium col-6-small">
