Updated bar graph image

--- a/exploration.html
+++ b/exploration.html
@@ -136,7 +136,7 @@
               <section class="box style1">
                 <h3>Bar Graph</h3>
                 <p>We chose to visualize the frequency of the keywords used to search for the tweets using a bar graph. Other than the words 'lumad'/'ip', and 'npa'/'cpp', which are directly part of our research question, we found that 'school/s', 'alcadev', and 'communist' were mentioned frequently. Other prominent words were 'save our schools' (collectively), 'salugpungan'/'salungpongan' and 'terrorist'.</p>
-                <img src = "BarGraph1.png", width = "500">
+                <img src = "BarGraph.png", width = "500">
               </section>
             </div>
             <div class="col-12 col-12-medium col-6-small">
