--- a/statmodel.html
+++ b/statmodel.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PH Twitter Fake News Analysis</title>
+		<title>A Time-series Analysis of the Red-tagging of Lumad Groups on Twitter</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
